/ ‘Real Analysis/UGA Questions/sections/08_2016 Fall.md’ / ‘Real Analysis/UGA Questions/sections/09_2016 Spring.md’ / ‘Real Analysis/UGA Questions/sections/10_2015 Fall.md’ / ‘Real Analysis/UGA Questions/sections/11_2015 Spring.md’ / ‘Real Analysis/UGA Questions/sections/12_2014 Fall.md’ / ‘Real Analysis/UGA Questions/sections/13_2014 Spring.md’

--- a/Real Analysis/UGA Questions/sections/10_2015 Fall.md
+++ b/Real Analysis/UGA Questions/sections/10_2015 Fall.md
@@ -1,6 +1,6 @@
 # Fall 2015
 
-## 1
+## Fall 2015 # 1
 Define
 $$
 f(x)=c_{0}+c_{1} x^{1}+c_{2} x^{2}+\ldots+c_{n} x^{n} \text { with } n \text { even and } c_{n}>0.
@@ -9,19 +9,19 @@ $$
 Show that there is a number $x_m$ such that $f(x_m) \leq f(x)$ for all $x\in \RR$.
 
 
-## 2
+## Fall 2015 # 2
 Let $f: \RR \to \RR$ be Lebesgue measurable.
 
 1. Show that there is a sequence of simple functions $s_n(x)$ such that $s_n(x) \to f(x)$ for all $x\in \RR$.
 2. Show that there is a Borel measurable function $g$ such that $g = f$ almost everywhere.
 
-## 3
+## Fall 2015 # 3
 Compute the following limit:
 $$
 \lim _{n \rightarrow \infty} \int_{1}^{n} \frac{n e^{-x}}{1+n x^{2}} ~\sin \left(\frac x n\right) ~d x
 $$
 
-## 4
+## Fall 2015 # 4
 Let $f: [1, \infty) \to \RR$ such that $f(1) = 1$ and
 $$
 f^{\prime}(x)= \frac{1} {x^{2}+f(x)^{2}}
@@ -33,7 +33,7 @@ $$
 $$
 
 
-## 5
+## Fall 2015 # 5
 Let $f, g \in L^1(\RR)$ be Borel measurable.
 
 1. Show that 
@@ -44,7 +44,7 @@ $$
 \|f * g\|_{1} \leq\|f\|_{1}\|g\|_{1}
 $$
 
-## 6
+## Fall 2015 # 6
 Let $f: [0, 1] \to \RR$ be continuous.
 Show that
 $$
