--- a/Real Analysis/UGA Questions/sections/13_2014 Spring.md
+++ b/Real Analysis/UGA Questions/sections/13_2014 Spring.md
@@ -1,6 +1,6 @@
 # Spring 2014
 
-## 1
+## Spring 2014 # 1
 
 1. Give an example of a continuous $f\in L^1(\RR)$ such that $f(x) \not\to 0$ as$\abs x \to \infty$.
 
@@ -9,7 +9,7 @@ $$
 \lim_{\abs x \to \infty} f(x) = 0.
 $$
 
-## 2
+## Spring 2014 # 2
 Let $\theset{a_n}$ be a sequence of real numbers such that
 $$
 \theset{b_n} \in \ell^2(\NN) \implies \sum a_n b_n < \infty.
@@ -19,7 +19,7 @@ Show that $\sum a_n^2 < \infty$.
 > Note: Assume $a_n, b_n$ are all non-negative.
 
 
-## 3
+## Spring 2014 # 3
 Let $f: \RR \to \RR$ and suppose
 $$
 \forall x\in \RR,\quad f(x) \geq \limsup _{y \rightarrow x} f(y)
@@ -27,7 +27,7 @@ $$
 Prove that $f$ is Borel measurable.
 
 
-## 4
+## Spring 2014 # 4
 Let $(X, \mathcal M, \mu)$ be a measure space and suppose $f$ is a measurable function on $X$.
 Show that
 $$
@@ -39,7 +39,7 @@ $$
 $$
 and characterize the collection of functions of each type.
 
-## 5
+## Spring 2014 # 5
 Let $f, g \in L^1([0, 1])$ and for all $x\in [0, 1]$ define
 $$
 F(x):=\int_{0}^{x} f(y) d y \quad \text { and } \quad G(x):=\int_{0}^{x} g(y) d y.
