--- a/Real Analysis/UGA Questions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Questions/sections/08_2016 Fall.md
@@ -1,6 +1,6 @@
-# Fall 2016 (Neil-ish)
+# Fall 2016 
 
-## 1
+## Fall 2016 # 1
 
 Define
 $$
@@ -17,7 +17,7 @@ $$
 \left(\frac{1}{n^{x}}\right)^{\prime}=-\frac{1}{n^{x}} \ln n
 $$
 
-## 2
+## Fall 2016 # 2
 
 Let $f, g: [a, b] \to \RR$ be measurable with
 $$
@@ -33,7 +33,7 @@ $$
 $$
 
 
-## 3
+## Fall 2016 # 3
 
 Let $f\in L^1(\RR)$.
 Show that
@@ -41,7 +41,7 @@ $$
 \lim _{x \rightarrow 0} \int_{\mathbb{R}}|f(y-x)-f(y)| d y=0
 $$
 
-## 4
+## Fall 2016 # 4
 Let $(X, \mathcal M, \mu)$ be a measure space and suppose $\theset{E_n} \subset \mathcal M$ satisfies
 $$
 \lim _{n \rightarrow \infty} \mu\left(X \backslash E_{n}\right)=0.
@@ -55,14 +55,14 @@ $$
 Show that $G \in \mathcal M$ and $\mu(G) = 0$.
 
 
-## 5
+## Fall 2016 # 5
 
 Let $\phi\in L^\infty(\RR)$. Show that the following limit exists and satisfies the equality
 $$
 \lim _{n \rightarrow \infty}\left(\int_{\mathbb{R}} \frac{|\phi(x)|^{n}}{1+x^{2}} d x\right)^{\frac{1}{n}} = \norm{\phi}_\infty.
 $$
 
-## 6
+## Fall 2016 # 6
 
 Let $f, g \in L^2(\RR)$. Show that
 $$
