--- a/Real Analysis/UGA Questions/sections/09_2016 Spring.md
+++ b/Real Analysis/UGA Questions/sections/09_2016 Spring.md
@@ -1,6 +1,6 @@
-# Spring 2016 (Neil-ish)
+# Spring 2016
 
-## 1
+## Spring 2016 # 1
 For $n\in \NN$, define
 $$
 e_{n}=\left(1+\frac{1}{n}\right)^{n} 
@@ -20,12 +20,12 @@ Use this to show the following:
 3. $2 < e_n < E_n < 4$.
 4. $\lim _{n \rightarrow \infty} e_{n}=\lim _{n \rightarrow \infty} E_{n}$.
 
-## 2
+## Spring 2016 # 2
 Let $0 < \lambda < 1$ and construct a Cantor set $C_\lambda$ by successively removing middle intervals of length $\lambda$.
 
 Prove that $m(C_\lambda) = 0$.
 
-## 3
+## Spring 2016 # 3
 Let $f$ be Lebesgue measurable on $\RR$ and $E \subset \RR$ be measurable such that
 $$
 0<A=\int_{E} f(x) d x<\infty.
@@ -36,7 +36,7 @@ $$
 \int_{E_{t}} f(x) d x=t A.
 $$
 
-## 4
+## Spring 2016 # 4
 Let $E \subset \RR$ be measurable with $m(E) < \infty$. 
 Define
 $$
@@ -54,7 +54,7 @@ $$
 \chi_{E \cap(E+x)}(y)=\chi_{E}(y) \chi_{E}(y-x)
 $$
 
-## 5
+## Spring 2016 # 5
 Let $(X, \mathcal M, \mu)$ be a measure space. For $f\in L^1(\mu)$ and $\lambda > 0$, define
 $$
 \phi(\lambda)=\mu(\{x \in X | f(x)>\lambda\}) 
@@ -67,7 +67,7 @@ $$
 \int_{X}|f| ~d \mu=\int_{0}^{\infty}[\phi(\lambda)+\psi(\lambda)] ~d \lambda
 $$
 
-## 6
+## Spring 2016 # 6
 Without using the Riesz Representation Theorem, compute
 $$
 \sup \left\{\left|\int_{0}^{1} f(x) e^{x} d x\right| \suchthat f \in L^{2}([0,1], m),~~ \|f\|_{2} \leq 1\right\}
