--- a/Real Analysis/UGA Questions/sections/11_2015 Spring.md
+++ b/Real Analysis/UGA Questions/sections/11_2015 Spring.md
@@ -1,6 +1,6 @@
 # Spring 2015
 
-## 1
+## Spring 2015 # 1
 Let $(X, d)$ and $(Y, \rho)$ be metric spaces, $f: X\to Y$, and $x_0 \in X$.
 
 Prove that the following statements are equivalent:
@@ -8,7 +8,7 @@ Prove that the following statements are equivalent:
 1. For every $\varepsilon > 0 \quad \exists \delta > 0$ such that $\rho( f(x), f(x_0)  ) < \varepsilon$ whenever $d(x, x_0) < \delta$.
 2. The sequence $\theset{f(x_n)}_{n=1}^\infty \to f(x_0)$ for every sequence $\theset{x_n} \to x_0$ in $X$.
 
-## 2
+## Spring 2015 # 2
 Let $f: \RR \to \CC$ be continuous with period 1. Prove that
 $$
 \lim _{N \rightarrow \infty} \frac{1}{N} \sum_{n=1}^{N} f(n \alpha)=\int_{0}^{1} f(t) d t \quad \forall \alpha \in \RR\setminus\QQ.
@@ -16,7 +16,7 @@ $$
 
 > Hint: show this first for the functions $f(t) = e^{2\pi i k t}$ for $k\in \ZZ$.
 
-## 3 
+## Spring 2015 # 3 
 
 Let $\mu$ be a finite Borel measure on $\RR$ and $E \subset \RR$ Borel. 
 Prove that the following statements are equivalent:
@@ -30,7 +30,7 @@ $$
 H \subseteq E \subseteq V \quad \text{and}\quad \mu(V\setminus H) = 0
 $$
 
-## 4
+## Spring 2015 # 4
 Define
 $$
 f(x, y):=\left\{\begin{array}{ll}{\frac{x^{1 / 3}}{(1+x y)^{3 / 2}}} & {\text { if } 0 \leq x \leq y} \\ {0} & {\text { otherwise }}\end{array}\right.
@@ -39,7 +39,7 @@ $$
 Carefully show that $f \in L^1(\RR^2)$.
 
 
-## 5
+## Spring 2015 # 5
 Let $\mathcal H$ be a Hilbert space.
 
 1. Let $x\in \mathcal H$ and $\theset{u_n}_{n=1}^N$ be an orthonormal set.
@@ -50,7 +50,7 @@ Let $\mathcal H$ be a Hilbert space.
 2. Conclude that finite dimensional subspaces of $\mathcal H$ are always closed.
 
 
-## 6
+## Spring 2015 # 6
 Let $f \in L^1(\RR)$ and $g$ be a bounded measurable function on $\RR$.
 
 1. Show that the convolution $f\ast g$ is well-defined, bounded, and uniformly continuous on $\RR$.
