--- a/Real Analysis/UGA Questions/sections/12_2014 Fall.md
+++ b/Real Analysis/UGA Questions/sections/12_2014 Fall.md
@@ -1,12 +1,12 @@
 # Fall 2014
 
-## 1
+## Fall 2014 # 1
 Let $\theset{f_n}$ be a sequence of continuous functions such that $\sum f_n$ converges uniformly.
 
 Prove that $\sum f_n$ is also continuous.
 
 
-## 2
+## Fall 2014 # 2
 Let $I$ be an index set and $\alpha: I \to (0, \infty)$.
 
 1. Show that
@@ -21,20 +21,20 @@ $$
   $$
   Show that $f$ is continuous at $x \iff x\not\in \QQ$.
 
-## 3
+## Fall 2014 # 3
 Let $f\in L^1(\RR)$. Show that
 $$
 \forall\varepsilon > 0 ~~\exists \delta > 0 \text{ such that } m(E) < \delta \implies \int_{E}|f(x)| d x<\varepsilon
 $$
 
-## 4
+## Fall 2014 # 4
 Let $g\in L^\infty([0, 1])$
 Prove that
 $$
 \int_{[0,1]} f(x) g(x) d x=0 \quad\text{for all continuous } f:[0, 1] \to \RR \implies g(x) = 0 \text{ almost everywhere. }
 $$
 
-## 5
+## Fall 2014 # 5
 
 1. Let $f \in C_c^0(\RR^n)$, and show
 $$
@@ -46,7 +46,7 @@ $$
 f\in L^1(\RR^n),~ g\in L^\infty(\RR^n) \implies f \ast g \text{ is bounded and uniformly continuous. }
 $$
 
-## 6
+## Fall 2014 # 6
 Let $1 \leq p,q \leq \infty$ be conjugate exponents, and show that
 $$
 f \in L^p(\RR^n) \implies \|f\|_{p}=\sup _{\|g\|_{q}=1}\left|\int f(x) g(x) d x\right|
