--- a/Real Analysis/UGA Questions/sections/11_2015 Spring.md
+++ b/Real Analysis/UGA Questions/sections/11_2015 Spring.md
@@ -9,10 +9,11 @@ Prove that the following statements are equivalent:
 2. The sequence $\theset{f(x_n)}_{n=1}^\infty \to f(x_0)$ for every sequence $\theset{x_n} \to x_0$ in $X$.
 
 ## Spring 2015 # 2
-Let $f: \RR \to \CC$ be continuous with period 1. Prove that
-$$
+Let $f: \RR \to \CC$ be continuous with period 1. 
+Prove that
+\[
 \lim _{N \rightarrow \infty} \frac{1}{N} \sum_{n=1}^{N} f(n \alpha)=\int_{0}^{1} f(t) d t \quad \forall \alpha \in \RR\setminus\QQ.
-$$
+\]
 
 > Hint: show this first for the functions $f(t) = e^{2\pi i k t}$ for $k\in \ZZ$.
 
