/ ‘Real Analysis/UGA Questions/sections/0000_Integration and L1.md’ / ‘Real Analysis/UGA Questions/sections/03_2019 Spring.md’ / ‘Real Analysis/UGA Questions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Questions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Questions/sections/04_2018 Fall.md
@@ -4,13 +4,13 @@
 ## Fall 2018 # 3
 Suppose $f(x)$ and $xf(x)$ are integrable on $\RR$.
 Define $F$ by
-$$
-F(t):=\int_{-\infty}^{\infty} f(x) \cos (x t) d x
-$$
+\[
+F(t)\definedas \int _{-\infty}^{\infty} f(x) \cos (x t) dx
+\]
 Show that 
-$$
-F^{\prime}(t)=-\int_{-\infty}^{\infty} x f(x) \sin (x t) d x.
-$$
+\[
+F'(t)=-\int _{-\infty}^{\infty} x f(x) \sin (x t) dx
+.\]
 
 
 ## Fall 2018 # 4
