/ ‘Real Analysis/UGA Questions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Questions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Questions/sections/04_2018 Fall.md
@@ -13,20 +13,12 @@ F'(t)=-\int _{-\infty}^{\infty} x f(x) \sin (x t) dx
 .\]
 
 
-## Fall 2018 # 4
-Let $f\in L^1([0, 1])$.
-Prove that
-$$
-\lim_{n \to \infty} \int_{0}^{1} f(x) \abs{\sin n x} ~d x= \frac{2}{\pi} \int_{0}^{1} f(x) ~d x
-$$
-
-> Hint: Begin with the case that $f$ is the characteristic function of an interval.
 
 ## Fall 2018 # 5
 Let $f \geq 0$ be a measurable function on $\RR$.
 Show that
 $$
-\int_{\mathbb{R}} f=\int_{0}^{\infty} m(\{x: f(x)>t\}) d t
+\int _{\RR} f=\int_{0}^{\infty} m(\{x: f(x)>t\}) dt
 $$
 
 ## Fall 2018 # 6
