/ ‘Real Analysis/UGA Questions/sections/07_2017 Spring.md’

--- a/Real Analysis/UGA Questions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Questions/sections/07_2017 Spring.md
@@ -1,24 +1,5 @@
 # Spring 2017
 
-## Spring 2017 # 3
-
-Let
-$$
-f_{n}(x)=a e^{-n a x}-b e^{-n b x} \quad \text{ where } 0 < a < b.
-$$
-
-Show that 
-
-a. $\sum_{n=1}^{\infty}\left|f_{n}\right| \text { is not in } L^{1}([0, \infty), m)$
-
-  > Hint: $f_n(x)$ has a root $x_n$.
-
-b. 
-$$
-\sum_{n=1}^{\infty} f_{n} \text { is in } L^{1}([0, \infty), m) 
-\quad \text { and } \quad 
-\int_{0}^{\infty} \sum_{n=1}^{\infty} f_{n}(x) ~d m=\ln \frac{b}{a}
-$$
 
 ## Spring 2017 # 4
 Let $f(x, y)$ on $[-1, 1]^2$ be defined by 
@@ -35,7 +16,7 @@ Determine if $f$ is integrable.
 Let $f, g \in L^2(\RR)$. 
 Prove that the formula
 $$
-h(x):=\int_{-\infty}^{\infty} f(t) g(x-t) d t
+h(x) \definedas \int _{-\infty}^{\infty} f(t) g(x-t) \, dt
 $$
 defines a uniformly continuous function $h$ on $\RR$.
 
