/ ‘Real Analysis/UGA Questions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Questions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Questions/sections/08_2016 Fall.md
@@ -8,7 +8,7 @@
 Let $f\in L^1(\RR)$.
 Show that
 $$
-\lim _{x \rightarrow 0} \int_{\mathbb{R}}|f(y-x)-f(y)| d y=0
+\lim _{x \to 0} \int _{\RR} \abs{f(y-x)-f(y)} \, dy = 0
 $$
 
 
