--- a/Real Analysis/UGA Questions/sections/0000_Data.md
+++ b/Real Analysis/UGA Questions/sections/0000_Data.md
@@ -7,4 +7,4 @@ todos: true
 **Preface**
 
 I'd like to extend my gratitude to Peter Woolfitt for supplying many solutions and checking many proofs of the rest in problem sessions.
-
+Many other solutions contain input and ideas from other graduate students and faculty members at UGA, along with questions and answers posted on Math Stack Exchange or Math Overflow.
