< ‘Algebra/Review Doc/Algebra_Qual_Notes.md’ > ‘Algebra/Review Doc/AlgebraQualNotes.md’ < ‘Algebra/Review Doc/Algebra_Qual_Notes.tex’ > ‘Algebra/Review Doc/AlgebraQualNotes.tex’ < ‘Algebra/Review Doc/Algebra_Qual_Notes_stripped.md’ > ‘Algebra/Review Doc/AlgebraQualNotes_stripped.md’ - ‘Algebra/Review Doc/Algebra_Qual_Notes.pdf’

--- a/Algebra/Review Doc/AlgebraQualNotes.tex
+++ b/Algebra/Review Doc/AlgebraQualNotes.tex
@@ -1,6 +1,6 @@
 \input{"preamble.tex"}
 
-\addbibresource{Algebra\_Qual\_Notes.bib}
+\addbibresource{AlgebraQualNotes.bib}
 
 \let\Begin\begin
 \let\End\end
