/ ‘Algebra/Review Doc/AlgebraQualNotes.bib’

--- a/Algebra/Review Doc/AlgebraQualNotes.bib
+++ b/Algebra/Review Doc/AlgebraQualNotes.bib
@@ -1,6 +1,6 @@
 @book{dummit_foote_2004,
   author    = {Dummit, David Steven. and Foote, Richard M.},
-  publisher = {John Wiley & Sons},
+  publisher = {John Wiley and Sons},
   date      = {2004},
   title     = {Abstract algebra},
 }
