--- a/Algebra/Review Doc/AlgebraQualNotes.tex
+++ b/Algebra/Review Doc/AlgebraQualNotes.tex
@@ -4567,9 +4567,16 @@ Algebra}\label{modules-and-linear-algebra}}
 
 \todo[inline]{Sort out from module section.}
 
-\hypertarget{even-more-algebra-question-in-progress}{%
-\section{Even More Algebra Question (In
-Progress)}\label{even-more-algebra-question-in-progress}}
+\hypertarget{even-more-algebra-questions}{%
+\section{Even More Algebra
+Questions}\label{even-more-algebra-questions}}
+
+\begin{remark}
+
+(DZG): These all come from a random PDF I found, but I couldn't find the
+original author/source!
+
+\end{remark}
 
 \hypertarget{groups}{%
 \subsection{Groups}\label{groups}}
@@ -4840,7 +4847,7 @@ A subgroup of a finitely-generated free group is..? Prove your answers.
 \hypertarget{question-1.42}{%
 \subsubsection{Question 1.42}\label{question-1.42}}
 
-\todo[inline]{Missing.}
+What are the subgroups of \({\mathbb{Z}}^2\)?
 
 \hypertarget{question-1.43}{%
 \subsubsection{Question 1.43}\label{question-1.43}}
@@ -5119,17 +5126,23 @@ What is the Galois group of \(x^2 - 2\)? Why is \(x^2 - 2\) irreducible?
 \hypertarget{question-3.23}{%
 \subsubsection{Question 3.23}\label{question-3.23}}
 
-\todo[inline]{Missing}
+What is the Galois group of
+\begin{align*}
+{\mathbb{Q}}(\sqrt 2, \sqrt 3)\, / \, {\mathbb{Q}}
+?\end{align*}
 
 \hypertarget{question-3.24}{%
 \subsubsection{Question 3.24}\label{question-3.24}}
 
-\todo[inline]{Missing}
+What is the Galois group of
+\begin{align*}
+{\mathbb{Q}}\qty{ \sqrt{n_1}, \cdots, \sqrt{n_m} } \, / \, {\mathbb{Q}}(\sqrt{n_1} + \cdots + \sqrt{n_m})
+?\end{align*}
 
 \hypertarget{question-3.25}{%
 \subsubsection{Question 3.25}\label{question-3.25}}
 
-What are the Galois groups of irreducible cubics? \todo[inline]{Missing}
+What are the Galois groups of irreducible cubics?
 
 \hypertarget{question-3.26}{%
 \subsubsection{Question 3.26}\label{question-3.26}}
@@ -5297,10 +5310,10 @@ Suppose you are given a finite Galois extension \(K/{\mathbb{Q}}\) by
 \hypertarget{question-3.55}{%
 \subsubsection{Question 3.55}\label{question-3.55}}
 
-How many automorphisms does the complex field have? How can you extend
-the automorphisms of an algebraic field into \({\mathbb{C}}\)? How can
-you extend a simple automorphism (e.g.~a general subfield isomorphism?
-What feature of \({\mathbb{C}}\) allows you to? \todo[inline]{Missing}
+How many automorphisms does the complex field have? How can you extend a
+simple automorphism \(\sqrt{2} \mapsto -\sqrt{2}\) of an algebraic field
+into \({\mathbb{C}}\)? How can you extend a subfield automorphism? What
+feature of \({\mathbb{C}}\) allows you to?
 
 \hypertarget{question-3.56.}{%
 \subsubsection{Question 3.56.}\label{question-3.56.}}
@@ -5511,7 +5524,7 @@ Give a representative in each class.
 
 What \(3 \times 3\) matrices over the rationals (up to similarity)
 satisfy \(f (A) = 0\), where \(f (x) = (x^2 + 2)(x - 1)^3\)? List all
-possible rational forms. \todo[inline]{Check}
+possible rational forms.
 
 \hypertarget{question-4.13}{%
 \subsubsection{Question 4.13}\label{question-4.13}}
@@ -5705,8 +5718,8 @@ What is a PID? What's an example of a UFD that is not a PID? Why? Is
 \hypertarget{question-6.3}{%
 \subsubsection{Question 6.3}\label{question-6.3}}
 
-Is \({\mathbb{C}}[x, y]\) a PID? What are the prime ideals in it?
-\todo[inline]{Missing}
+Is \({\mathbb{C}}[x, y]\) a PID? Is
+\(\left\langle{ x, y }\right\rangle\) a prime ideals in it?
 
 \hypertarget{question-6.4}{%
 \subsubsection{Question 6.4}\label{question-6.4}}
@@ -5747,8 +5760,6 @@ Is a ring of formal power series a UFD?
 \subsubsection{Question 6.11}\label{question-6.11}}
 
 Is a polynomial ring over a UFD again a UFD?
-
-\todo[inline]{Check?}
 
 \hypertarget{question-6.12}{%
 \subsubsection{Question 6.12}\label{question-6.12}}
@@ -5857,7 +5868,11 @@ What are the prime ideals and maximal ideals of \({\mathbb{Z}}[x]\)?
 \hypertarget{question-6.29}{%
 \subsubsection{Question 6.29}\label{question-6.29}}
 
-\todo[inline]{Missing}
+Is the following map an isomorphism?
+\begin{align*}
+{\mathbb{Z}}[t] / \left\langle{ t^p - 1 }\right\rangle  &\to {\mathbb{Z}}[w] \\
+t &\mapsto w \text{ where } w^p = 1
+.\end{align*}
 
 \hypertarget{question-6.30}{%
 \subsubsection{Question 6.30}\label{question-6.30}}
@@ -5957,7 +5972,9 @@ Consider the space of functions from the natural numbers to
 \({\mathbb{C}}\) endowed with the usual law of addition and the
 following analogue of the convolution product:
 
-\todo[inline]{Missing}
+\begin{align*}
+(f\ast g)(n) = \sum_{d\divides n}^{}f(d) g\qty{n\over d}
+.\end{align*}
 
 Show that this is a ring. What does this ring remind you of and what can
 you say about it?
@@ -6283,13 +6300,11 @@ What classical function in mathematics does this number relate to?
 Discuss representations of \({\mathbb{Z}}\), the infinite cyclic group.
 What is the group algebra of \({\mathbb{Z}}\)?
 
-What is the connection \todo[inline]{Incomplete question}
-
 \hypertarget{question-8.33}{%
 \subsubsection{Question 8.33}\label{question-8.33}}
 
 What is a Lie group? Define a unitary representation. What is the
-Peter-- Weyl theorem? What is the Lie algebra? The Jacobi identity? What
+Peter--Weyl theorem? What is the Lie algebra? The Jacobi identity? What
 is the adjoint representation of a Lie algebra? What is the commutator
 of two vector fields on a manifold?
 
