/ ‘Algebra/Review Doc/UGAFall2019/Problem_Set_3.tex’

--- a/Algebra/Review Doc/UGAFall2019/Problem_Set_3.tex
+++ b/Algebra/Review Doc/UGAFall2019/Problem_Set_3.tex
@@ -57,7 +57,7 @@ Let $R$ and $S$ be commutative rings with multiplicative identity.
 \end{problem}
 
 \begin{problem}
-Determine for which integers the ring $\Bbb{Z}/n\Bbb{Z}$ is a direct sum of fields. Carefully prove your answer.
+Determine for which integers the ring $\mathbb{Z}/n\mathbb{Z}$ is a direct sum of fields. Carefully prove your answer.
 \end{problem}
 
 \begin{problem}
