/ ‘Algebra/Review Doc/UGAFall2019/Problem_Set_5.tex’ / ‘Algebra/Review Doc/UGAFall2019/Problem_Set_7.tex’ / ‘Algebra/Review Doc/UGAFall2019/Problem_Set_9.tex’ / ‘Algebra/Review Doc/UGAFall2019/Problem_Set_z10.tex’

--- a/Algebra/Review Doc/UGAFall2019/Problem_Set_5.tex
+++ b/Algebra/Review Doc/UGAFall2019/Problem_Set_5.tex
@@ -60,7 +60,7 @@ the following polynomials over the corresponding fields:
 If $f \in K[x]$ is irreducible of degree $m > 0$ and $\mathrm{char}(K)$ does not divide $m$, then $f$ is separable.
 \end{problem}
 
-\hline
+\newpage
 
 % Qual Problems
 \newpage
