--- a/Algebra/Review Doc/UGAFall2019/Problem_Set_7.tex
+++ b/Algebra/Review Doc/UGAFall2019/Problem_Set_7.tex
@@ -127,7 +127,7 @@ Let $R$ be a commutative ring and let $M$ be an $R$-module. Recall that for $\mu
 \mathrm{Ann}(\mu) = \{ r\in R \mid r\mu = 0\}.
 \]
 
-Suppose that $I$ is an ideal in $R$ which is maximal with respect to the property there exists a nonzero element $\mu \in M$ such that $\I = \mathrm{Ann}(\mu)$.
+Suppose that $I$ is an ideal in $R$ which is maximal with respect to the property there exists a nonzero element $\mu \in M$ such that $I = \mathrm{Ann}(\mu)$.
 
 Prove that $I$ is a \textit{prime} ideal in $R$.
 
