--- a/Algebra/Review Doc/UGAFall2019/Problem_Set_9.tex
+++ b/Algebra/Review Doc/UGAFall2019/Problem_Set_9.tex
@@ -39,7 +39,13 @@ Show that an $n\times m$ matrix $A$ over a division ring $D$ has an $m\times n$ 
 \begin{enumerate}
     \item Show that a system of linear equations
 $$
-\begin{array}{l}{a_{11} x_{1}+a_{12} x_{2}+\cdots+a_{1 m} x_{m}=b_{1}} \\ \vdots & \\ {a_{n 1} x_{1}+a_{n 2} x_{2}+\cdots+a_{n m} x_{m}=b_{n}}\end{array}
+\begin{array}{l}{
+a_{11} x_{1}+a_{12} x_{2}+\cdots+a_{1 m} x_{m}=b_{1}} 
+\\ 
+\vdots 
+\\ 
+{a_{n 1} x_{1}+a_{n 2} x_{2}+\cdots+a_{n m} x_{m}=b_{n}}
+\end{array}
 $$
 
 has a simultaneous solution $\iff$ the corresponding matrix equation $AX = B$ has a solution, where $A = (a_{ij}), X = [x_1, \cdots, x_m]^t$, and $B = [b_1, \cdots , b_n]^t$.
@@ -54,7 +60,7 @@ has a simultaneous solution $\iff$ the corresponding matrix equation $AX = B$ ha
     
     \textit{Hint: use part 2.}
     
-    \item If $B=0$, so the system $AX=B$ is homogeneous, then it has a nontrivial solution $\iff$ $\rank A < m$ and in particular $n<m$.
+  \item If $B=0$, so the system $AX=B$ is homogeneous, then it has a nontrivial solution $\iff \mathrm{rank} A < m$ and in particular $n<m$.
 \end{enumerate}
 
 \end{problem}
