--- a/Algebra/Review Doc/UGAFall2019/Problem_Set_z10.tex
+++ b/Algebra/Review Doc/UGAFall2019/Problem_Set_z10.tex
@@ -38,7 +38,7 @@ Show that if $\phi$ is an endomorphism of a free $k$-module $E$ of finite rank, 
 
 \textit{
 Hint: \\
-If $A$ is the matrix of $\phi$ and $B = x I_n - A$ then $B^a B = \abs{B} I_n = p_\phi I_n$ in $M_n(k[x])$. \\
+If $A$ is the matrix of $\phi$ and $B = x I_n - A$ then $B^a B = |B| I_n = p_\phi I_n$ in $M_n(k[x])$. \\
 If $E$ is a $k[x]$-module with structure induced by $\phi$, and $\psi$ is the $k[x]$-module endomorphism $E\to E$ with matrix given by $B$, then $$\psi(u) = x u -\phi(u) = \phi(u) - \phi(u) = 0$$ for all $u\in E$.
 }
 \end{problem}
