/ ‘Algebra/Review Doc/UGAFall2019/Problem_Set_3.tex’ / ‘Algebra/Review Doc/UGAFall2019/preamble.tex’

--- a/Algebra/Review Doc/UGAFall2019/preamble.tex
+++ b/Algebra/Review Doc/UGAFall2019/preamble.tex
@@ -86,8 +86,10 @@
 
 \usepackage{chngcntr}
 
+
+\theoremstyle{plain}
 \newtheorem{problem}{Problem}[section]
-\counterwithin*{problem}{section}
+%\counterwithin*{problem}{section}
 
 \newtheorem{solution}{Solution}[section]
 
