/ ‘Algebra/Review Doc/UGAFall2019/Problem_Set_6.tex’ / ‘Algebra/Review Doc/UGAFall2019/Problem_Set_7.tex’ / ‘Algebra/Review Doc/UGAFall2019/Problem_Set_8.tex’ / ‘Algebra/Review Doc/UGAFall2019/Problem_Set_9.tex’ / ‘Algebra/Review Doc/UGAFall2019/Problem_Set_z10.tex’ / ‘Algebra/Review Doc/UGAFall2019/main.md’ / ‘Algebra/Review Doc/UGAFall2019/preamble.tex’

--- a/Algebra/Review Doc/UGAFall2019/preamble.tex
+++ b/Algebra/Review Doc/UGAFall2019/preamble.tex
@@ -88,9 +88,9 @@
 
 
 \theoremstyle{plain}
-\newtheorem{problem}{Problem}[section]
+\newtheorem{problem*}{Problem}[section]
 %\counterwithin*{problem}{section}
 
-\newtheorem{solution}{Solution}[section]
+\newtheorem{solution*}{Solution}[section]
 
 
