/ ‘Algebra/Review Doc/UGAFall2019/Problem_Set_1.tex’ / ‘Algebra/Review Doc/UGAFall2019/main.md’ / ‘Algebra/Review Doc/UGAFall2019/preamble.tex’

--- a/Algebra/Review Doc/UGAFall2019/preamble.tex
+++ b/Algebra/Review Doc/UGAFall2019/preamble.tex
@@ -87,10 +87,10 @@
 \usepackage{chngcntr}
 
 
-\theoremstyle{plain}
-\newtheorem{problem*}{Problem}[section]
+\theoremstyle{definition}
+\newtheorem{problem*}{Problem}
 %\counterwithin*{problem}{section}
 
-\newtheorem{solution*}{Solution}[section]
+\newtheorem{solution*}{Solution}
 
 
