--- a/Algebra/Review Doc/UGAFall2019/preamble.tex
+++ b/Algebra/Review Doc/UGAFall2019/preamble.tex
@@ -88,7 +88,7 @@
 
 
 \theoremstyle{definition}
-\newtheorem{problem*}{Problem}
+\newtheorem*{problem}{Problem}
 %\counterwithin*{problem}{section}
 
 \newtheorem{solution*}{Solution}
