/ ‘Algebra/Review Doc/UGAFall2019/Problem_Set_1.tex’ / ‘Algebra/Review Doc/UGAFall2019/preamble.tex’ < ‘Algebra/Review Doc/UGAFall2019/main.md’ > ‘Algebra/Review Doc/sections/main.md’

--- a/Algebra/Review Doc/UGAFall2019/Problem_Set_1.tex
+++ b/Algebra/Review Doc/UGAFall2019/Problem_Set_1.tex
@@ -1,52 +1,52 @@
 % ToDo: Add solutions to this sometime *after* the pset is due (ZG)
 
 \subsection{Exercises}
-\begin{problem*}[Hungerford 1.6.3]
+\begin{problem}[Hungerford 1.6.3]
 \label{prob:1.1}
 If $\sigma = (i_1 i_2 \cdots i_r) \in S_n$ and $\tau \in S_n$, then show that $\tau\sigma\tau^{-1} = (\tau(i_1) \tau(i_2) \cdots \tau(i_r))$.
 
-\end{problem*}
-\begin{problem*}[Hungerford 1.6.4]
+\end{problem}
+\begin{problem}[Hungerford 1.6.4]
 \label{prob:1.2}
 Show that $S_n \cong \left\langle (12), (123\cdots n)\right\rangle$ and also that $S_n \cong \left\langle (12), (23\cdots n)\right\rangle$
-\end{problem*}
+\end{problem}
 
-\begin{problem*}[Hungerford 2.2.1]
+\begin{problem}[Hungerford 2.2.1]
 \label{prob:1.3}
 Let $G$ be a finite abelian group that is not cyclic. Show that $G$ contains a subgroup isomorphic to $\mathbb{Z}_p \oplus \mathbb{Z}_p$ for some prime $p$.
-\end{problem*}
+\end{problem}
 
-\begin{problem*}[Hungerford 2.2.12.b]
+\begin{problem}[Hungerford 2.2.12.b]
 \label{prob:1.4}
 Determine (up to isomorphism) all abelian groups of order 64; do the same for order 96.
-\end{problem*}
+\end{problem}
 
-\begin{problem*}[Hungerford 2.4.1]
+\begin{problem}[Hungerford 2.4.1]
 \label{prob:1.5}
 Let $G$ be a group and $A \trianglelefteq G$ be a normal abelian subgroup. Show that $G/A$ acts on $A$ by conjugation and construct a homomorphism $\varphi: G/A \to \mathrm{Aut}(A)$.
-\end{problem*}
+\end{problem}
 
-\begin{problem*}[Hungerford 2.4.9]
+\begin{problem}[Hungerford 2.4.9]
 \label{prob:1.6}
 Let $Z(G)$ be the center of $G$. Show that if $G/Z(G)$ is cyclic, then $G$ is abelian.
 
 \textit{Note that Hungerford uses the notation $C(G)$ for the center.}
-\end{problem*}
+\end{problem}
 
-\begin{problem*}[Hungerford 2.5.6]
+\begin{problem}[Hungerford 2.5.6]
 \label{prob:1.7}
 Let $G$ be a finite group and $H \trianglelefteq G$ a normal subgroup of order $p^k$. Show that $H$ is contained in every Sylow $p$-subgroup of $G$.
-\end{problem*}
+\end{problem}
 
-\begin{problem*}[Hungerford 2.5.9]
+\begin{problem}[Hungerford 2.5.9]
 \label{prob:1.8}
 Let $\left| G \right| = p^n q$ for some primes $p > q$. Show that $G$ contains a unique normal subgroup of index $q$.
-\end{problem*}
+\end{problem}
 
 \newpage
-\subsection{Qual problem*s}
+\subsection{Qual Problems}
 
-\begin{problem*}
+\begin{problem}
 \label{prob:1.9}
 Let $G$ be a finite group and $p$ a prime number. Let $X_p$ be the set of Sylow-$p$ subgroups of $G$ and $n_p$ be the cardinality of $X_p$. Let $\mathrm{Sym}(X)$ be the permutation group on the set $X_p$.
     \begin{enumerate}
@@ -54,9 +54,9 @@ Let $G$ be a finite group and $p$ a prime number. Let $X_p$ be the set of Sylow-
         \item Deduce that if $G$ is simple then the order of $G$ divides $n_p!$.
         \item Show that for any $1\leq a \leq 4$ and any prime power $p^k$, no group of order $ap^k$ is simple.
     \end{enumerate}
-\end{problem*}
+\end{problem}
 
-\begin{problem*}
+\begin{problem}
 \label{prob:1.10}
 
 Let $G$ be a finite group and let $N \trianglelefteq G$, and let $p$ be a prime number and $Q$ a subgroup of $G$ such that $N \subset Q$ and $Q/N$ is a Sylow $p-$subgroup of $G/N$.
@@ -65,14 +65,14 @@ Let $G$ be a finite group and let $N \trianglelefteq G$, and let $p$ be a prime 
 
 \item Prove that every Sylow $p-$subgroup of $G/N$ is the image of a Sylow $p-$subgroup of $G$.
 \end{enumerate}
-\end{problem*}
+\end{problem}
 
-\begin{problem*}
+\begin{problem}
 \label{prob:1.11}
 Let $G$ be a finite group and $H<G$ a subgroup. Let $n_H$ be the number of subgroups of $G$ that are conjugate to $H$. Show that $n_H$ divides the order of $G$.
-\end{problem*}
+\end{problem}
 
-\begin{problem*}
+\begin{problem}
 \label{prob:1.12}
 Let $G=S_5$, the symmetric group on 5 elements. Identify all conjugacy classes of elements in $G$, provide a representative from each class, and prove that this list is complete.
-\end{problem*}
+\end{problem}
