--- a/Algebra/Review Doc/UGAFall2019/preamble.tex
+++ b/Algebra/Review Doc/UGAFall2019/preamble.tex
@@ -91,6 +91,6 @@
 \newtheorem*{problem}{Problem}
 %\counterwithin*{problem}{section}
 
-\newtheorem{solution*}{Solution}
+\newtheorem*{solution}{Solution}
 
 
