--- a/Real Analysis/Review Doc/sections/91_1_Fall_2019_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/91_1_Fall_2019_Exam_2.md
@@ -153,21 +153,23 @@ m\qty{\theset{f\inv(1)}}
 ,\end{align*}
 and characterize the functions of each type
 
-Proof
-:   \hfill
-    \begin{align*}
-    \int f^p 
-    &= \int_{x < 1} f^p + \int_{x=1}f^p + \int_{x > 1} f^p\\
-    &= \int_{x < 1} f^p + \int_{x=1}1 + \int_{x > 1} f^p \\
-    &= \int_{x < 1} f^p + m(\theset{f = 1}) + \int_{x > 1} f^p \\
-    &\converges{p\to\infty}\to 0  + m(\theset{f = 1}) + 
-    \begin{cases} 
-    0 & m(\theset{x\geq 1}) = 0 \\ 
-    \infty & m(\theset{x\geq 1}) > 0.
-    \end{cases}
-    \end{align*} 
 
-\todo{Justify passing limit into integrals.}
+:::{.solution}
+\begin{align*}
+\int f^p 
+&= \int_{x < 1} f^p + \int_{x=1}f^p + \int_{x > 1} f^p\\
+&= \int_{x < 1} f^p + \int_{x=1}1 + \int_{x > 1} f^p \\
+&= \int_{x < 1} f^p + m(\theset{f = 1}) + \int_{x > 1} f^p \\
+&\converges{p\to\infty}\to 0  + m(\theset{f = 1}) + 
+\begin{cases} 
+0 & m(\theset{x\geq 1}) = 0 \\ 
+\infty & m(\theset{x\geq 1}) > 0.
+\end{cases}
+\end{align*} 
+
+:::
+
+<!--\todo{Justify passing limit into integrals.}-->
 
 
 ## 5: Dual Spaces
