--- a/Real Analysis/UGA Questions/sections/Fall 2020.md
+++ b/Real Analysis/UGA Questions/sections/Fall 2020.md
@@ -13,14 +13,14 @@ $$
 
 ### a
 
-Let $f: \Bbb{R} \to \Bbb{R}$. Prove that
+Let $f: \RR \to \RR$. Prove that
 $$
-f(x) \leq \liminf_{y\to x} f(y)~ \text{for each}~ x\in \Bbb{R} \iff \{ x\in \Bbb{R} \mid f(x) > a \}~\text{is open for all}~ a\in \Bbb{R}
+f(x) \leq \liminf_{y\to x} f(y)~ \text{for each}~ x\in {\RR} \iff \{ x\in {\RR} \mid f(x) > a \}~\text{is open for all}~ a\in {\RR}
 $$
 
 ### b
 
-Recall that a function $f: \Bbb{R} \to \Bbb{R}$ is called *lower semi-continuous* iff it satisfies either condition in part (a) above.
+Recall that a function $f: {\RR} \to {\RR}$ is called *lower semi-continuous* iff it satisfies either condition in part (a) above.
 
 Prove that if $\mathcal{F}$ is an y family of lower semi-continuous functions, then 
 $$
