/ ‘Topology/Review Doc/TopologyQualifyingExamNotes.md’ / ‘Topology/Review Doc/TopologyQualifyingExamNotes.pdf’ / ‘Topology/Review Doc/TopologyQualifyingExamNotes.tex’ / ‘Topology/Review Doc/TopologyQualifyingExamNotes_stripped.md’ / ‘Topology/Review Doc/sections/000_Preface.md’

--- a/Topology/Review Doc/TopologyQualifyingExamNotes.tex
+++ b/Topology/Review Doc/TopologyQualifyingExamNotes.tex
@@ -54,6 +54,16 @@
 \hypertarget{preface}{%
 \section{Preface}\label{preface}}
 
+References:
+
+\begin{itemize}
+\tightlist
+\item
+  Munkres \autocite{munkres_2018}
+\item
+  Hatcher \autocite{hatcher_2002}
+\end{itemize}
+
 Some fun resources:
 
 \begin{itemize}
