/ ‘Topology/Review Doc/TopologyQualifyingExamNotes.bib’ / ‘Topology/Review Doc/TopologyQualifyingExamNotes.html’ - ‘Topology/Review Doc/tex_tempfiles/TopologyQualifyingExamNotes.pdf’

--- a/Topology/Review Doc/TopologyQualifyingExamNotes.bib
+++ b/Topology/Review Doc/TopologyQualifyingExamNotes.bib
@@ -1,3 +1,14 @@
-@book{hatcher_2002, place={New York}, title={Algebraic Topology}, publisher={Cambridge University Press}, author={Hatcher, Allen}, year={2002}}
+@book{hatcher_2002,
+  author    = {Hatcher, Allen},
+  publisher = {Cambridge University Press},
+  date      = {2002},
+  title     = {Algebraic Topology},
+}
 
-@book{munkres_2018, place={New York, NY}, title={Topology}, publisher={Pearson}, author={Munkres, James Raymond}, year={2018}}
+@book{munkres_2018,
+  author    = {Munkres, James Raymond},
+  publisher = {Pearson},
+  date      = {2018},
+  title     = {Topology},
+}
+
