- ‘Topology/Review Doc/TopologyQualifyingExamNotes.html’ / ‘Topology/Review Doc/TopologyQualifyingExamNotes.md’ / ‘Topology/Review Doc/TopologyQualifyingExamNotes.pdf’ / ‘Topology/Review Doc/TopologyQualifyingExamNotes.tex’ / ‘Topology/Review Doc/TopologyQualifyingExamNotes_stripped.md’ / ‘Topology/Review Doc/sections/001_Definitions.md’ + ‘Topology/Review Doc/tex_tempfiles/TopologyQualifyingExamNotes.pdf’

--- a/Topology/Review Doc/TopologyQualifyingExamNotes.tex
+++ b/Topology/Review Doc/TopologyQualifyingExamNotes.tex
@@ -290,7 +290,7 @@ equivalence classes.
 
 \begin{definition}[Closed Maps]
 
-See \autocite{def:open_closed_maps}.
+See \cref{def:open_closed_maps}.
 
 \end{definition}
 
