/ ‘Complex Analysis/Review Doc/sections/2021-01-11.md’

--- a/Complex Analysis/Review Doc/sections/2021-01-11.md
+++ b/Complex Analysis/Review Doc/sections/2021-01-11.md
@@ -3,4 +3,5 @@
 
 
 - Prove the triangle inequality
-- Prove the re
+- Prove the reverse triangle inequality
+- Show that $\sum z^{k-1}/k$ converges for all $z\in S^1$ except $z=1$.
