/ ‘Complex Analysis/Review Doc/sections/2021-01-11.md’

--- a/Complex Analysis/Review Doc/sections/2021-01-11.md
+++ b/Complex Analysis/Review Doc/sections/2021-01-11.md
@@ -5,3 +5,5 @@
 - Prove the triangle inequality
 - Prove the reverse triangle inequality
 - Show that $\sum z^{k-1}/k$ converges for all $z\in S^1$ except $z=1$.
+- What is an example of a noncontinuous limit of continuous functions?
+- Show that the uniform limit of continuous functions is continuous.
