--- a/Complex Analysis/Review Doc/sections/2021-01-11.md
+++ b/Complex Analysis/Review Doc/sections/2021-01-11.md
@@ -7,3 +7,5 @@
 - Show that $\sum z^{k-1}/k$ converges for all $z\in S^1$ except $z=1$.
 - What is an example of a noncontinuous limit of continuous functions?
 - Show that the uniform limit of continuous functions is continuous.
+- Show that $f$ is holomorphic if and only if $\bar\del f = 0$.
+- Show $n^{1\over n} \converges{n\to \infty } \to 1$.
