/ ‘Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.md’ / ‘Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.tex’ / ‘Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes_stripped.md’

--- a/Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.tex
+++ b/Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.tex
@@ -1214,7 +1214,8 @@ Theorem}\label{fundamental-theorem-of-algebra-liouvilles-theorem}}
     \({\left\lvert {1/p(z)} \right\rvert} \leq C\) everywhere.
   \item
     So \(1/p(z)\) is bounded an entire and thus constant by Liouville's
-    theorem -- but this forces \(p\) to be constant. \(\contradiction\)
+    theorem -- but this forces \(p\) to be constant.
+    \({\unicode{x21af}}\)
   \end{itemize}
 \end{itemize}
 
