--- a/Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.tex
+++ b/Complex Analysis/Review Doc/Complex_Analysis_Qual_Notes.tex
@@ -51,6 +51,15 @@
 \tableofcontents
 \newpage
 
+\def\contradiction
+{
+\tikz[baseline, x=0.2em, y=0.2em, line width=0.04em]
+\draw (0,0) -- ({4*cos(45)},{4*sin(45)})
+    (-1,1) -- ({-1 + 4*cos(45)},{1 + 4*sin(45)})
+    (-1,3) -- ({-1 + 4*cos(315)},{3 + 4*sin(315)})
+    (0,4) -- ({0 + 4*cos(315)},{4 + 4*sin(315)});
+}
+
 \hypertarget{useful-techniques}{%
 \section{Useful Techniques}\label{useful-techniques}}
 
@@ -1214,8 +1223,7 @@ Theorem}\label{fundamental-theorem-of-algebra-liouvilles-theorem}}
     \({\left\lvert {1/p(z)} \right\rvert} \leq C\) everywhere.
   \item
     So \(1/p(z)\) is bounded an entire and thus constant by Liouville's
-    theorem -- but this forces \(p\) to be constant.
-    \({\unicode{x21af}}\)
+    theorem -- but this forces \(p\) to be constant. \(\contradiction\)
   \end{itemize}
 \end{itemize}
 
